test: 1. add reactor test dependency       2. add JwtAuthenticationFilterTest